v0.9.4 (WIP):

    BUGFIX: Canvas: Remember index of first command buffer to not miss updating any used (#260)

    BUGFIX: Editor: Don't duplicated ImVec2/ImVec3 == != operators defined since ImGui r19002 (#268)

    BUGFIX: Examples: Use imgui_impl_opengl3_loader.h instead of gl3w (#264)

v0.9.3 (2023-10-14):

    CHANGE: Canvas: Use ImDrawCallback_ImCanvas macro as draw callback sentinel (#256), thanks @nspitko

    BUGFIX: Canvas: Ensure SentinelDrawCallback cleanup (#255)

    BUGFIX: Editor: Don't call Reasume/Suspend on invisible canvas (#255)

v0.9.2 (2023-09-01):

    NEW: Editor: Add offset of hover/select to style (thanks @MultiPain)

    NEW: Editor: Add IMGUI_NODE_EDITOR_API to support building editor as a shared library (#189)

    NEW: Canvas: Add IMGUIEX_CANVAS_API to support building canvas as a shared library (#189)

    CHANGE: Editor: Support ImGui r18836 after SetItemUsingMouseWheel removal (#218), thanks @ocornut

    CHANGE: Editor: Define IMGUI_DEFINE_MATH_OPERATORS before <imgui.h> (#209), thanks @ocornut

    CHANGE: Examples: Define IMGUI_DEFINE_MATH_OPERATORS before <imgui.h> (#209), thanks @ocornut

    CHANGE: Canvas: Don't use deprecated SetItemAllowOverlap (#250)

    CHANGE: Examples: Don't use deprecated SetItemAllowOverlap (#250)

    CHANGE: Editor: Define IMGUI_DEFINE_MATH_OPERATORS before <imgui.h> (#209), thanks @ocornut

    CHANGE: Editor: Unary operator- for ImVec2 is defined by ImGui since r18955 (#248)

    BUGFIX: Editor: Correctly initialize 'width' for view resize code (thx @gnif)

    BUGFIX: Examples: Handle node deletion before links (#182)
        Deleting node queue connected links for deletion.

    BUGFIX: Examples: Simplify and fix drawing of node header line (#180)

    BUGFIX: Editor: Cleanup tabs.

    BUGFIX: Editor: Use ImGuiKey directly with ImGui r18822 (#183)

    BUGFIX: Examples: Use ImGuiKey directly with ImGui r18822 (#183)

    BUGFIX: Examples: Use ImGuiKey_KeypadEnter with ImGui r18604 (#183)
